# tanggap-ai

./: README.md
adk-agent/: pyproject.toml  server.py
adk-agent/tanggap_agent/: __init__.py  agent.py
backend/: Dockerfile  deploy.sh  requirements.txt
backend/app/: main.py  models.py
backend/app/services/: agent_client.py  bq_client.py
frontend/: Dockerfile  ERROR_FIX.md  README.md  TESTING.md  app.js  config.js  deploy.sh  index.html  nginx.conf  style.css  test-config.sh
